--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -87,7 +87,7 @@
     }
 }
 
-.o_kanban_view {
+.o_kanban_renderer, .o_legacy_kanban_view {
     .oe_kanban_mass_mailing {
         .o_title {
             margin-bottom: 16px;
@@ -104,15 +104,16 @@
     }
     &.o_kanban_mailing_list {
         .o_kanban_group:not(.o_column_folded) {
-            width: 350px + $o-kanban-group-padding;
-        }
-        .o_kanban_record {
-            width: 350px;
+            flex-basis: 380px
         }
         &.o_kanban_ungrouped {
             padding: 0;
             .o_mailing_list_kanban_grouped {
                 display: none !important;
+            }
+            .o_kanban_record {
+                width: 100%;
+                margin: 0;
             }
         }
         &.o_kanban_grouped .o_mailing_list_kanban_ungrouped {
