--- a/addons/mail/views/mail_channel_views.xml
+++ b/addons/mail/views/mail_channel_views.xml
@@ -20,7 +20,7 @@
                             </div>
                         </t>
                         <t t-name="kanban-box">
-                            <div class="oe_module_vignette oe_kanban_global_click">
+                            <div class="oe_module_vignette oe_kanban_global_click d-flex align-items-center">
                                 <img t-att-src="kanban_image('mail.channel', 'avatar_128', record.id.raw_value)" class="oe_module_icon" alt="Channel"/>
                                 <div class="oe_module_desc">
                                     <h4 class="o_kanban_record_title">#<field name="name"/></h4>
