[IMP] website, website_sale, sale: expose checkbox/radio defaults
This commits exposes checkbox/radio default values at "theme-level"
allowing themes to customize these components.

It also improve the overall consistency, removing 'website_sales'
overrides and defining `:hover` behaviors globally.

The odoo 'css_attribute_color' field has been adapted in order to
match user's fields customization.

task-2907955

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -142,6 +142,11 @@ $input-border-radius: o-website-value('input-border-radius') !default;
 $input-border-radius-lg: o-website-value('input-border-radius-lg') !default;
 $input-border-radius-sm: o-website-value('input-border-radius-sm') !default;
 
+$input-transition: o-website-value('input-transition' , #{background-color .05s ease-in-out, border-color .05s ease-in-out, box-shadow .05s ease-in-out}) !default;
+
+$form-check-input-border: o-website-value('form-check-input-border', 1px solid o-color('400')) !default;
+$form-check-input-border-radius: o-website-value('form-check-input-border-radius', 0) !default;
+
 // Badge
 $badge-padding-y: 0.25em !default;
 $badge-padding-x: 0.4em !default;
