--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -1993,6 +1993,10 @@ $o-base-website-values-palette: (
     'input-border-radius': null, // Default to BS
     'input-border-radius-sm': null, // Default to BS
     'input-border-radius-lg': null, // Default to BS
+    'input-transition': null, // Default to BS
+
+    'form-check-input-border': null, // Default to BS
+    'form-check-input-border-radius': null, // Default to BS
 
     // A key from the $o-theme-font-configs map (null = default to the first key)
     'font': null,
