--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -486,7 +486,7 @@
                     <div class="oe_title">
                         <h1 class="d-flex flex-row">
                             <field name="is_favorite" nolabel="1" widget="boolean_favorite" class="mr-3"/>
-                            <field name="name" class="o_text_overflow" placeholder="Project Name"/>
+                            <field name="name" class="text-break" placeholder="Project Name"/>
                         </h1>
                     </div>
                     <group>
