[ADD] mass_mailing_themes: new "Coffeebreak" template

--- a/addons/mass_mailing_themes/views/mass_mailing_themes_templates.xml
+++ b/addons/mass_mailing_themes/views/mass_mailing_themes_templates.xml
@@ -21,6 +21,9 @@
             <div data-name="solar" title="Promotion Program" data-img="/mass_mailing_themes/static/src/img/theme_imgs/solar_thumb" data-images-info='{"logo": {"format": "png"}, "all": {"module": "mass_mailing_themes"}}'>
                 <t t-call="mass_mailing_themes.theme_solar_template"/>
             </div>
+            <div data-name="coffeebreak" title="Coffeebreak" data-layout-styles="background-color: rgb(238, 233, 226) !important;" data-img="/mass_mailing_themes/static/src/img/theme_imgs/solar_thumb" data-images-info='{"logo": {"format": "png"}, "all": {"module": "mass_mailing_themes"}}'>
+                <t t-call="mass_mailing_themes.theme_coffeebreak_template"/>
+            </div>
         </xpath>
     </template>
 
@@ -70,7 +73,7 @@
             <div class="container">
                 <div class="row s_nb_column_fixed s_col_no_bgcolor">
                     <div class="col-lg-12 s_media_list_item pt0 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-5 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_newsletter/s_media_list_1.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -83,7 +86,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pt16 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-5 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_newsletter/s_media_list_2.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -96,7 +99,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pt16 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-5 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_newsletter/s_media_list_3.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -229,7 +232,7 @@
             <div class="container">
                 <div class="row s_nb_column_fixed s_col_no_bgcolor">
                     <div class="col-lg-12 s_media_list_item pb0 pt0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-4 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_tech/tech_media_list_image_1.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -243,7 +246,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pt0 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="align-self-stretch s_media_list_img_wrapper col-lg-12">
                                 <div class="s_hr o_mail_snippet_general pt16 pb16" data-snippet="s_hr" data-name="Separator">
                                     <hr class="s_hr_1px s_hr_solid"/>
@@ -252,7 +255,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pb0 pt0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-4 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_tech/tech_media_list_image_2.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -264,7 +267,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pt0 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-12 s_media_list_img_wrapper align-self-stretch">
                                 <div class="s_hr o_mail_snippet_general pt16 pb16" data-snippet="s_hr" data-name="Separator">
                                     <hr class="s_hr_1px s_hr_solid"/>
@@ -273,7 +276,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 s_media_list_item pt0 pb0" data-name="Media item">
-                        <div class="row s_col_no_resize s_col_no_bgcolor g-0 align-items-center o_cc o_cc1">
+                        <div class="row s_col_no_resize s_col_no_bgcolor no-gutters align-items-center o_cc o_cc1">
                             <div class="col-lg-4 s_media_list_img_wrapper align-self-stretch">
                                 <img src="/mass_mailing_themes/static/src/img/theme_tech/tech_media_list_image_3.jpg" class="s_media_list_img h-100 w-100"/>
                             </div>
@@ -866,6 +869,183 @@
                         </div>
                         <p class="o_mail_footer_copy">
                             <font style="color: rgb(137, 101, 1);">© <t t-out="now.strftime('%Y')" /> All Rights Reserved</font></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <!-- Theme "CoffeeBreak" default template -->
+    <template id="theme_coffeebreak_template">
+        <style id="design-element">
+            h1 {
+                font-size: 42px;
+                font-weight: bolder;
+                color: #543427;
+                font-family: Georgia, Times, "Times New Roman", serif;
+            }
+            h2 {
+                font-size: 14px;
+                color: #937853;
+            }
+            h3 {
+                font-size: 14px;
+                font-weight: bolder;
+                color: #543427;
+            }
+            a:not(.btn), a.btn.btn-link {
+                text-decoration-line: underline;
+                color: #397B21;
+            }
+            a.btn.btn-primary, a.btn.btn-outline-primary, a.btn.btn-fill-primary {
+                color: #543427;
+                background-color: #D3C5B1;
+                border-color: #D3C5B1;
+            }
+            a.btn.btn-secondary, a.btn.btn-outline-secondary, a.btn.btn-fill-secondary {
+                color: #FFFFFF;
+                background-color: #543427;
+                border-color: #543427;
+            }
+            hr {
+                border-top-color: #D3C5B1 !important;
+                border-top-width: 2px !important;
+            }
+        </style>
+        <t t-set="now" t-value="datetime.datetime.now()"/>
+        <div class="s_header_social o_mail_block_header_social o_mail_snippet_general" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_mail_block_header_social" data-name="Left Logo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 pt16 pb16">
+                        <a style="text-decoration:none;float:none;" href="http://www.example.com">
+                             <img border="0" src="/mass_mailing_themes/static/src/img/theme_coffeebreak/s_default_image_logo.png" style="height:auto;max-width:400px; width:100px;" alt="Your Logo" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 o_mail_header_social" style="text-align: right">
+                            <a aria-label="Facebook" title="Facebook" target="_blank" href="https://www.facebook.com/Odoo">
+                                <span class="fa fa-facebook rounded rounded-circle" style="color: rgb(84, 52, 39) !important; background-color: rgb(211, 197, 177) !important;">​</span>
+                            </a>&amp;nbsp;&amp;nbsp;
+                            <a style="margin-left:10px" aria-label="Twitter" title="Twitter" target="_blank" href="https://twitter.com/Odoo">
+                                <span class="fa fa-twitter rounded rounded-circle" style="color: rgb(84, 52, 39) !important; background-color: rgb(211, 197, 177) !important;">​</span>
+                            </a>&amp;nbsp;&amp;nbsp;
+                            <a style="margin-left:10px" aria-label="Instagram" title="Instagram" target="_blank" href="https://www.instagram.com/explore/tags/odoo/" contenteditable="true">
+                                <span class="fa fa-instagram rounded rounded-circle" style="color: rgb(84, 52, 39) !important; background-color: rgb(211, 197, 177) !important;">​</span>
+                            </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="s_title o_mail_snippet_general pt16 pb16" data-snippet="s_title" data-name="Title">
+            <div class="container s_allow_columns">
+                <h1 class="text-center">Company News</h1>
+                <h2 class="text-center">28 Jan 2022</h2>
+            </div>
+        </div>
+        <div class="s_hr o_mail_snippet_general pt16 pb0" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_hr" data-name="Separator">
+            <hr class="s_hr_1px s_hr_solid" style="border-top-color: rgb(211, 197, 177); !important"/>
+        </div>
+        <div class="s_cover o_mail_snippet_general" data-snippet="s_cover" data-name="Cover">
+            <img src="/mass_mailing/static/src/img/theme_coffeebreak/s_default_image_block_banner.jpg" alt="Cover image" class="img-fluid w-100 mx-auto"/>
+        </div>
+        <div class="s_hr o_mail_snippet_general pt16 pb0" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_hr" data-name="Separator">
+            <hr class="s_hr_1px s_hr_solid"/>
+        </div>
+        <div class="s_text_block o_mail_snippet_general pt40 pb40 px-3" data-snippet="s_text_block" data-name="Text">
+            <div class="container s_allow_columns">
+                <div class="row">
+                    <div class="col-lg-5 offset-lg-1">
+                        <p>If you didn't gather round the coffee machine or water-tank with your colleagues this week,
+                        you've probably missed some key information.</p>
+                        <p>We're here to make sure you miss none of the gossip.</p>
+                    </div>
+                    <div class="col-lg-4 offset-lg-1 pt24">
+                        <blockquote>
+                            <p>Communication is the key to success in any business.</p>
+                            <p style="text-align: right;">
+                                <span style="font-size: 12px; font-style: normal; font-weight: bolder;">- Lee Brown</span>
+                            </p>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="s_hr o_mail_snippet_general pt16 pb0" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_hr" data-name="Separator">
+            <hr class="s_hr_1px s_hr_solid"/>
+        </div>
+        <div class="s_text_image o_mail_snippet_general pt32 pb32" data-snippet="s_image_text" data-name="Image - Text">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-10 offset-lg-1 px-0">
+                        <h3>NEW PEOPLE</h3>
+                        <img src="/mass_mailing_themes/static/src/img/theme_coffeebreak/s_default_image_block_image_text.jpg" class="img w-100"/>
+                    </div>
+                    <div class="col-lg-10 offset-lg-1 pt16 pb0">
+                        <p>We're super excited to present our three new members, freshly arrived this week in our offices.</p>
+                        <p><span style="font-weight: bolder;">Linda</span> will be helping our beloved HR team, she'll be taking care of your payroll, so be nice!</p>
+                        <p>You'll be seeing <span style="font-weight: bolder;">Armando</span> around the kitchen since he's our new <span style="font-weight: bolder;">chef's assistant</span>!</p>
+                        <p><span style="font-weight: bolder;">Martin</span> is currently doing his onboarding in our remote office but you'll be seeing him in the R&amp;D department very soon.</p>
+                        <p><br/></p>
+                        <p style="text-align: center;">
+                            <a class="btn btn-primary rounded-circle btn-lg" href="#" target="_blank">Give them a warm welcome!</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="s_hr o_mail_snippet_general pt16 pb0" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_hr" data-name="Separator">
+            <hr class="s_hr_1px s_hr_solid"/>
+        </div>
+        <div class="s_text_block o_mail_snippet_general px-3 pt40 pb32" data-snippet="s_text_block" data-name="Text">
+            <div class="container s_allow_columns">
+                <div class="row">
+                    <div class="offset-lg-1 col-lg-10">
+                        <h3>DON'T MISS THIS</h3>
+                        <ul>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">10 Books To Read in 2022</a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">Find Out Who's Employee Of The Month</a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">Why You Need Two Types of Content Strategists</a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">7 Ways to Nurture Creativity</a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">Infographic: Our Company Throughout The Generations</a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" data-original-title="" title="">7 Unexpected Signs You're Good At Your Job</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="s_hr o_mail_snippet_general pt16 pb0" style="background-color: rgb(238, 233, 226) !important;" data-snippet="s_hr" data-name="Separator">
+            <hr class="s_hr_1px s_hr_solid"/>
+        </div>
+        <div class="s_footer_social o_mail_block_footer_social o_mail_footer_social_center o_mail_snippet_general pt16 pb16" style="background-color: rgb(84, 52, 39) !important;" data-snippet="s_mail_block_footer_social" data-name="Footer Center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12" style="text-align: center;">
+                        <a aria-label="Facebook" title="Facebook" target="_blank" href="https://www.facebook.com/Odoo"><span class="fa fa-facebook text-o-color-4"></span></a> &amp;nbsp;&amp;nbsp;
+                        <a style="margin-left:10px" aria-label="Twitter" target="_blank" title="Twitter" href="https://twitter.com/Odoo"><span class="fa fa-twitter text-o-color-4"></span></a>  &amp;nbsp;&amp;nbsp;
+                        <a style="margin-left:10px" aria-label="Instagram" title="Instagram" target="_blank" href="https://www.instagram.com/explore/tags/odoo/"><span class="fa fa-instagram text-o-color-4"></span></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 o_mail_footer_links pt8 pb8" style="text-align: center;">
+                        <a role="button" href="/unsubscribe_from_list" class="btn btn-link text-o-color-4">Unsubscribe</a> | <a role="button" href="/contactus" class="btn btn-link text-o-color-4">Contact</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p style="text-align: center;" class="text-o-color-4">
+                            © <t t-out="now.strftime('%Y')" /> All Rights Reserved
+                        </p>
                     </div>
                 </div>
             </div>
